--- a/styles.css
+++ b/styles.css
@@ -32,13 +32,17 @@ main {
 
 .card {
     background-color: var(--card-bg);
-    max-width: 375px;
+    max-width: 350px;
     height: fit-content;
     display: flex;
     flex-direction: column;
     border-radius: 15px;
     text-align: left;
     padding: 30px 25px 30px 25px;
+}
+
+.image {
+    max-width: 350px;
 }
 
 .nft-name {
