--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 .attribution {
     color: var(--soft-blue);
+    padding-top: 75px;
     font-size: 12px;
     text-align: center;
+    justify-content: end;
 }
 
 .attribution a {
