--- a/styles.css
+++ b/styles.css
@@ -43,12 +43,14 @@ main {
 
 .image-overlay {
     display: inline-block;
-    height: 350px;
+    height: auto;
     background-color: var(--cyan);
 }
 
 .image {
-    max-width: 350px;
+    display: block;
+    width: 100%;
+    height: auto;
     transition: 0.3s ease-in;
 }
 
